--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doodle - Knowledge Social Platform</title>
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>✏️</text></svg>">
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>💡</text></svg>">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -129,7 +129,7 @@
         <div class="container mx-auto flex justify-between items-center">
             <div class="flex items-center space-x-2">
                 <div class="w-10 h-10 rounded-full doodle-gradient flex items-center justify-center shadow-lg">
-                    <span class="doodle-icon text-white">✏️</span>
+                    <span class="doodle-icon text-white">💡</span>
                 </div>
                 <span class="text-xl font-extrabold text-gray-800 tracking-tighter">Doodle</span>
             </div>
@@ -663,7 +663,7 @@
         <div class="rounded-3xl shadow-2xl w-full max-w-2xl mx-auto border border-white border-opacity-20 transition-all duration-300 transform scale-95 opacity-0" id="modalContent">
             <div class="p-5 border-b border-gray-100 flex justify-between items-center bg-white rounded-t-3xl">
                 <h3 class="text-xl font-extrabold text-gray-800 flex items-center">
-                    <span class="mr-2 text-2xl">✏️</span> Create New Insight
+                    <span class="mr-2 text-2xl">💡</span> Create New Insight
                 </h3>
                 <button id="closeModal" class="text-gray-500 hover:text-violet-600 transition p-2 rounded-full hover:bg-gray-100">
                     <i class="fas fa-times"></i>
